<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/homeFragment"
            android:title="@string/home" />
        <item
            android:id="@+id/loginFragment"
            android:title="@string/login" />
        <item
            android:id="@+id/aboutFragment"
            android:title="@string/about_us" />
        <item
            android:id="@+id/profileFragment"
            android:title="@string/profile" />
        <item
            android:id="@+id/directoryFragment"
            android:title="@string/directory" />
    </group>

    <item android:title="Support">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/helpFragment"
                    android:icon="@android:drawable/ic_menu_help"
                    android:title="@string/help" />
            </group>
        </menu>
    </item>
</menu>