<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/loginFragment"
        android:title="@string/login"
        app:showAsAction="always" />

    <item
        android:id="@+id/aboutFragment"
        android:title="@string/about_us"
        app:showAsAction="never" />

    <item
        android:id="@+id/profileFragment"
        android:title="@string/profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/directoryFragment"
        android:title="@string/directory"
        app:showAsAction="never" />

</menu>